fix annotation layer
now that the canvas is position:relative the default top
of the annotation layer is the bottom of the canvas
Set top:0 to have the annotation layer overlap

--- a/src/components/document/annotation-layer.scss
+++ b/src/components/document/annotation-layer.scss
@@ -4,6 +4,7 @@
   height: 100%;
   pointer-events: none;
   position: absolute;
+  top: 0;
   width: 100%;
 
   &.editing {
